--- a/package.json
+++ b/package.json
@@ -13,11 +13,19 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.14.1",
+    "@types/sqlite3": "^3.1.11",
+    "prisma": "^6.6.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "fastify": "^5.3.2"
+    "@fastify/rate-limit": "^10.2.2",
+    "@prisma/client": "^6.6.0",
+    "bcrypt": "^5.1.1",
+    "fastify": "^5.3.2",
+    "password-validator": "^5.3.0",
+    "sqlite3": "^5.1.7"
   }
 }
