--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.14.1",
+    "@types/nodemailer": "^6.4.17",
     "@types/sqlite3": "^3.1.11",
     "prisma": "^6.6.0",
     "ts-node-dev": "^2.0.0",
@@ -24,8 +25,11 @@
     "@fastify/rate-limit": "^10.2.2",
     "@prisma/client": "^6.6.0",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.5.0",
     "fastify": "^5.3.2",
+    "nodemailer": "^6.10.1",
     "password-validator": "^5.3.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "ts-node": "^10.9.2"
   }
 }
