--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^22.14.1",
+    "@types/node": "^22.15.3",
     "@types/nodemailer": "^6.4.17",
     "@types/sqlite3": "^3.1.11",
     "prisma": "^6.6.0",
@@ -22,6 +22,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@fastify/jwt": "^9.1.0",
     "@fastify/rate-limit": "^10.2.2",
     "@prisma/client": "^6.6.0",
     "bcrypt": "^5.1.1",
